# arr-great-reviewers

./: .gitignore  CNAME  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: deploy.yml
config/: data_sources.toml  manual_openreview_mappings.toml
data/: openreview_profile_mapping.json
docs/: METHODOLOGY.md
src/: arr_analysis.py  arr_dl.py  build_site.py  institution_utils.py  map_openreview_profiles.py  reviewer_utils.py
static/: robots.txt  schema.json
static/css/: main.css
static/js/: index.js  institutions-common.js  institutions.js  main.js  reviewers-common.js  reviewers.js  table-utils.js
templates/: about.html  base.html  great_review_banner.html  index.html  institution_profile.html  institutions.html  institutions_cycle.html  methodology.html  reviewer_profile.html  reviewers.html  reviewers_cycle.html
